src/test/deca/codegen/valid/sansObjet/opR.deca
// Description : Tests avec calculs appelant un grand nombre de registre

{
	int a, b, c, d, e, f, g, h, i;
	a = 1;
	b = 2;
	c = 3;
	d = 4;
	e = 5;
	f = 6;
	g = a*f*b/(c*a*b) + b * (c*b*a*d*e) /(e*(d*a*b)*a);
	println(g);
}
